# discord_bridge

./: .gitignore  Cargo.toml  README.md
src/: bridge.rs  commands.rs  handler.rs  main.rs  util.rs
src/usrp/: mod.rs  packets.rs
