[package]
name = "dmr-bridge-discord"
version = "0.2.0"
authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>", "Jessy SOBREIRO <jessy.sobreiro@gmail.com>"]
keywords = ["dmr", "analog-bridge", "usrp", "discord"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
description = "Bridge a DMR network with a Discord voice channel"
repository = "https://github.com/jess-sys/dmr-bridge-discord.git"
homepage = "https://github.com/jess-sys/dmr-bridge-discord"
documentation = "https://github.com/jess-sys/dmr-bridge-discord/README.md"
categories = ["command-line-utilities", "multimedia::audio", "network-programming"]

[dependencies]
songbird = { version = "0.4.3", features = ["receive"] }
serenity = { version = "0.12.2", features = ["model", "voice"] }
tokio = { version = "1.28.0", features = ["full"] }
chrono = "0.4.24"
dotenv = "0.15.0"
byteorder = "1.4.3"
rubato = "0.15.0"
dasp = { version = "0.11.0", features = ["all"] }
symphonia = "0.5.4"
pin-project = "1.1.5"
rand = "0.8.5"
