[package]
name = "discord-bridge"
version = "0.0.1"
authors = ["Jie Feng <hjf3108@gmail.com>", "Alexandre MONIER <alexandre.monierc@gmail.com>", "Jessy SOBREIRO <jessy.sobreiro@gmail.com>"]
keywords = ["dmr", "analog-bridge", "usrp", "discord"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
description = "Bridge a Discord voice channel with a RF channel"
repository = "https://github.com/rhgndf/discord_bridge.git"
homepage = "https://github.com/rhgndf/discord_bridge"
documentation = "https://github.com/rhgndf/discord_bridge/README.md"
categories = ["command-line-utilities", "multimedia::audio", "network-programming"]

[dependencies]
songbird = { version = "0.5.0", features = ["receive"] }
serenity = { version = "0.12.2", features = ["model", "voice"] }
tokio = { version = "1.28.0", features = ["full"] }
chrono = "0.4.24"
dotenv = "0.15.0"
byteorder = "1.4.3"
rubato = "0.16.2"
symphonia = "0.5.4"
pin-project = "1.1.5"
rand = "0.9.1"
poise = "0.6.1"
log = "0.4.22"
fern = "0.7.1"
humantime = "2.1.0"
